---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-02-22
  Bugfixes:
    - Allow blueprinting when selecting contents for an existing blueprint
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-01-30
  Changes:
    - Do not enable recipe by default, need to research technology
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-01-13
  Changes:
    - support migration of old 1.1 saves
    - add multiplayer fixes
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-11-29
  Changes:
    - support space platform building
    - remove space exploration support, not ported to 2.0
  Bugfixes:
    - restore correct image for item
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-11-14
  Changes:
    - Factorio 2.0 support
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-06-26
  Changes:
    - fix pin coloring
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-06-25
  Changes:
    - Fix the 'entities not connected to network' problem reported in the forums
    - Add support for space exploration
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2024-06-22
  Changes:
    - Replaced Lamp IO Pins with containers. Existing OCs will be migrated, but blueprints will have to be redone.
    - Remove invalid entities from networks